--- a/form.css
+++ b/form.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url(../images/bg-intro-mobile.png);
+  background-image: url(images/bg-intro-mobile.png);
   background-repeat: no-repeat;
   background-color: #ff7a7a;
   padding: 1em;
@@ -134,7 +134,7 @@ body {
 
 @media screen and (min-width: 768px) {
   body {
-    background-image: url(../images/bg-intro-desktop.png);
+    background-image: url(images/bg-intro-desktop.png);
     background-repeat: no-repeat;
     background-color: #ff7a7a;
     padding: 5em;
